[tool.poetry]
name = "laboinfra-github-io"
version = "0.0.0"
description = ""
authors = ["msterhuj <gabin.lanore@gmail.com>"]
readme = "README.md"
homepage = "https://docs.laboinfra.net/"
packages = [{include = "laboinfra"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = {extras = ["imaging"], version = "^9.6.5"}
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-git-committers-plugin-2 = "^2.4.1"
mkdocs-git-authors-plugin = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
